--- a/Launcher3/AndroidManifest.xml
+++ b/Launcher3/AndroidManifest.xml
@@ -20,7 +20,7 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.launcher3">
-
+    <uses-sdk android:targetSdkVersion="19" android:minSdkVersion="14"/>
     <permission
         android:name="com.android.launcher3.permission.PRELOAD_WORKSPACE"
         android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
