--- a/Launcher3/AndroidManifest.xml
+++ b/Launcher3/AndroidManifest.xml
@@ -19,7 +19,7 @@
 -->
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.launcher3">
+    package="com.ibimuyu.android.launcher3">
     <uses-sdk android:targetSdkVersion="19" android:minSdkVersion="14"/>
     <permission
         android:name="com.android.launcher3.permission.PRELOAD_WORKSPACE"
@@ -85,6 +85,7 @@
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.MONKEY"/>
